# auto-iot

./: .gitignore  Cargo.toml  README.md
artifacts/: grid_results.csv
src/: cli.rs  config.rs  error.rs  main.rs
src/datasets/: ecg5000.rs  mod.rs  nab_machine.rs  nab_taxi.rs  normalizer.rs  synthetic.rs
src/eda/: histogram.rs  latent_export.rs  mod.rs  stats.rs  tsne.rs
src/inference/: evaluator.rs  mod.rs  scorer.rs
src/models/: deep_ae.rs  metrics.rs  mod.rs  shallow_ae.rs
src/training/: early_stopping.rs  grid_search.rs  metrics.rs  mod.rs  trainer.rs
