[package]
name = "auto-iot"
version = "0.1.0"
edition = "2021"
description = "Autoencoder-based on-device anomaly detection: Burn 0.20.1 + Rust + WGPU"
license = "MIT"
readme = "README.md"

[[bin]]
name = "auto-iot"
path = "src/main.rs"

[dependencies]
# ML framework — WGPU backend + training utilities
burn = { version = "0.20.1", features = ["wgpu", "train", "ndarray"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal progress bars
indicatif = "0.17"

# Blocking HTTP for dataset fetching
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV parsing
csv = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Archive extraction
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Random numbers (synthetic dataset + shuffling)
rand = "0.8"
rand_distr = "0.4"

# t-SNE for latent space visualisation
bhtsne = "0.5"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
